--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -53,7 +53,7 @@
         </tbody>
     </table>
     {% else %}
-    <h3>No items in list</h3>
+    <h3 style="padding: 25px;">No items in list</h3>
     {% endif %}
 </div>
 
