--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -6,13 +6,37 @@
 </div>
 
 <div class="card-body">
+    {% if messages %}
+    <div class="messages">
+        <ul>
+            {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+    {% endif %}
+
     <form method="POST">
         {% csrf_token %}
         {{form.as_p}}
         <input class="button" type="submit" value="Login">
+
+        <!-- Loader -->
+        <div class="loader" style="display: none;">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+        </div>
     </form>
     
     <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
 </div>
+
+<script>
+    document.querySelector('form').addEventListener('submit', function() {
+        document.querySelector('.loader').style.display = 'block';
+    });
+</script>
 
 {% endblock content %}
