--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="card-body">
-    <h1>Registration</h1>
+    <h1>Register New Account</h1>
     <form method="POST">
         {% csrf_token %}
         <label>{{form.username.label}}</label>
