--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -393,6 +393,7 @@
             
             <div class="navbar-links">
                 <a href="{% url 'tasks' %}">Home</a>
+                <a href="https://github.com/kimintime/Harmonious_HR_taskmanager/tree/kim?tab=readme-ov-file#about" target="_blank">Help</a>
                 {% if request.user.is_authenticated %}
                 <a href="{% url 'logout' %}">Log out</a>
                 {% else %}
