--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -13,7 +13,15 @@
         <div class="media-body">
             <h2> {{ user.username }}</h2>
             <p>{{ user.email }}</p>
+
+            <!-- Profile picture update form -->
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ p_form.as_p }}
+                <button type="submit">Update</button>
+            </form>
         </div>
+        {% if user.is_superuser %}
         <div class="todo-list">
             <h2>Current tasks</h2>
             <h3 id="taskListTitle">New Hire Process <button id="activateButton" onclick="toggleCheckboxes()">Activate</button></h3>
@@ -33,6 +41,8 @@
                 <li><input type="checkbox" id="task13" disabled>Tax card reminder</li>
                 <li><input type="checkbox" id="task14" disabled>Welcome package</li>
             </ul>
+        </div>
+        {% endif %}
     </div>
 </div>
 
